wxc/include/ewxw/wxc_glue.h


int        expEVT_COMMAND_FIND(  );

int        expEVT_COMMAND_FIND_CLOSE(  );

int        expEVT_COMMAND_FIND_NEXT(  );

int        expEVT_COMMAND_FIND_REPLACE(  );

int        expEVT_COMMAND_FIND_REPLACE_ALL(  );

int        wxFindDialogEvent_GetFlags( TSelf(wxFindDialogEvent) _obj );

int        wxFindDialogEvent_GetReplaceString( TSelf(wxFindDialogEvent) _obj, void* _ref );


/* wxFindReplaceData */
TClassDefExtend(wxFindReplaceData,wxObject)
TClass(wxFindReplaceData) wxFindReplaceData_Create( int flags );

TClass(wxFindReplaceData) wxFindReplaceData_CreateDefault(  );

void       wxFindReplaceData_Delete( TSelf(wxFindReplaceData) _obj );

TStringLen wxFindReplaceData_GetFindString( TSelf(wxFindReplaceData) _obj, TStringOutVoid _ref );

int        wxFindReplaceData_GetFlags( TSelf(wxFindReplaceData) _obj );

TStringLen wxFindReplaceData_GetReplaceString( TSelf(wxFindReplaceData) _obj, TStringOutVoid _ref );

void       wxFindReplaceData_SetFindString( TSelf(wxFindReplaceData) _obj, TStringVoid str );

void       wxFindReplaceData_SetFlags( TSelf(wxFindReplaceData) _obj, int flags );

void       wxFindReplaceData_SetReplaceString( TSelf(wxFindReplaceData) _obj, TStringVoid str );


/* wxFindReplaceDialog */
TClassDefExtend(wxFindReplaceDialog,wxDialog)
TClass(wxFindReplaceDialog) wxFindReplaceDialog_Create( TClass(wxWindow) parent, TClass(wxFindReplaceData) data, TStringVoid title, int style );

TClass(wxFindReplaceData)   wxFindReplaceDialog_GetData( TSelf(wxFindReplaceDialog) _obj );

void       wxFindReplaceDialog_SetData( TSelf(wxFindReplaceDialog) _obj, TClass(wxFindReplaceData) data );